--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "The aim of this project is to demonstrate a simple front-end project with the use of typescript and other frameworks from the scratch.",
   "main": "index.js",
   "scripts": {
-    "test": "node --loader ts-node/esm index.ts"
+    "test": "node --loader ts-node/esm index.ts",
+    "dev": "webpack serve"
   },
   "keywords": [
     "typescript",
     "ts-node",
-    "tsc"
+    "tsc",
+    "webpack-dev-server"
   ],
   "author": "Levent Divilioglu",
   "license": "ISC",
   "devDependencies": {
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.3"
   }
 }
